# MinerLowC

./: .gitignore  CMakeLists.txt  cmd.sh
include/: common.h  hash.h
sample/: sha2.c
src/: hash.c  main.c
src/hash/: sha256.c
test_file/: generate_hash.sh  message.txt  sha256msg.txt
test_src/hash/: sha256_test.c
